--- a/Simulators/README
+++ b/Simulators/README
@@ -1,1 +1,1 @@
-
+This file includes two simulators: RLB+ and LRB. RLB is similar to RLB+ and other state-of-the-art algorithms are implemented on simulators coded by previous work.
